--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,12 +1,13 @@
-flask
-flask_cors
-gunicorn
-requests
-numpy
-pandas
-lightgbm
-joblib
-tensorflow==2.12.0
-Pillow
-python-dotenv
-google-generativeai
+flask-cors==6.0.1
+Flask==3.1.0
+requests==2.32.4
+pandas==2.3.1
+lightgbm==4.6.0
+joblib==1.5.1
+numpy==2.2.2
+google-generativeai==0.8.5
+tensorflow==2.20.0
+tensorflow_keras==0.1
+dotenv==0.9.9
+gunicorn==21.2.0
+scikit-learn
